# GCR-Modulation-Heliosphere-MHD

./: Makefile.in  config.h.in  configure  configure_for_sammy.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
benchmarks/: Makefile.in  main_test_turb_waves.cc
common/: print_warn.hh
runs/: Makefile  Makefile.am  Makefile.in  flo_calc_diffusion.cc  gcr_modulation_flo_batl.cc  gcr_modulation_test.cc  gcr_modulation_test_batl.cc  main_current_sheet_3d.cc  main_current_sheet_3d_2.cc  main_gcr_modulation_batl.cc  main_postprocess_diffusive_shock_acceleration.cc  main_test_background_batl.cc  postprocess_gcr_modulation_results.cc  test_calc_diffusion.cc  test_calc_diffusion_rigidity.cc  test_calc_drifts.cc  test_calc_drifts_kd.cc  test_calc_drifts_kd_compare.cc  test_calc_drifts_kd_header.cc
src/: background_base.cc  background_server.cc  background_server_batl.cc  boundary_base.cc  boundary_base.hh  diffusion_other.cc  diffusion_other.hh  distribution_other.cc  distribution_other.hh  drift_current_sheet.hh  server_base.hh  server_cartesian.cc  simulation.hh  trajectory_base.hh  trajectory_parker.cc  trajectory_parker.hh
src/.deps/: background_base.Po  background_base_visual.Po  background_server.Po  background_server_batl.Po  background_server_cartesian.Po  block_base.Po  block_batl.Po  block_cartesian.Po  boundary_base.Po  boundary_momentum.Po  boundary_space.Po  boundary_time.Po  cache_lru.Po  diffusion_base.Po  diffusion_other.Po  distribution_base.Po  distribution_other.Po  distribution_templated.Po  initial_base.Po  initial_momentum.Po  initial_space.Po  initial_time.Po  reader_cartesian.Po  server_base.Po  server_batl.Po  server_cartesian.Po  simulation.Po  source_base.Po  trajectory_base.Po  trajectory_parker.Po
tests/: Makefile.in
